# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  my_linter.yml
brain_games/: __init__.py  cli.py
brain_games/games/: brain_calc.py
brain_games/scripts/: __init__.py  brain_even.py  brain_games.py  calculations.py  user_prompts.py  user_welcome.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
cheklinim_brain_games.egg-info/: PKG-INFO  SOURCES.txt
