[tool.poetry]
name = "cheklinim_brain_games"
version = "0.1.0"
description = ""
authors = ["Ivan Cheklin <ivan.cheklin.1985@gmail.com>"]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
