[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ivan Cheklin <ivan.cheklin.1985@gmail.com>"]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"
